WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216919
REGRESSION(
r267502
): [GTK][WPE] ephemeral WebKitWebsiteDataManager ignores TLS errors by default
https://bugs.webkit.org/show_bug.cgi?id=216919
Summary
REGRESSION(r267502): [GTK][WPE] ephemeral WebKitWebsiteDataManager ignores TL...
Carlos Garcia Campos
Reported
2020-09-24 02:02:45 PDT
In case of ephemeral data manager we are initializing the policy but not setting it in the WebsiteDataStore.
Attachments
Patch
(4.25 KB, patch)
2020-09-24 02:06 PDT
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
Patch
(4.25 KB, patch)
2020-09-24 02:10 PDT
,
Carlos Garcia Campos
aperez
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2020-09-24 02:06:34 PDT
Created
attachment 409543
[details]
Patch
EWS Watchlist
Comment 2
2020-09-24 02:07:25 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
https://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Carlos Garcia Campos
Comment 3
2020-09-24 02:10:30 PDT
Created
attachment 409544
[details]
Patch
Carlos Garcia Campos
Comment 4
2020-09-24 02:17:27 PDT
Committed
r267524
: <
https://trac.webkit.org/changeset/267524
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug