REGRESSION(r267502): [GTK][WPE] ephemeral WebKitWebsiteDataManager ignores TLS errors by default https://bugs.webkit.org/show_bug.cgi?id=216919

Reviewed by Adrian Perez de Castro.

Source/WebKit:

Initialize ignoreTLSErrors on website data store for ephemeral sessions.

* UIProcess/API/glib/WebKitWebsiteDataManager.cpp:
(webkitWebsiteDataManagerConstructed):

Tools:

Add a test case to check we propagate the setting to the network process for ephemeral sessions too.

* TestWebKitAPI/Tests/WebKitGLib/TestSSL.cpp:
(EphemeralSSLTest::setup):
(EphemeralSSLTest::teardown):
(testTLSErrorsEphemeral):
(beforeAll):

Canonical link: https://commits.webkit.org/229706@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267524 268f45cc-cd09-0410-ab3c-d52691b4dbfc